...
class CustomDialog {
  static void show({
    required BuildContext context,
    required String title,
    required String message,
    required VoidCallback onConfirm,
    String confirmText = "Yes",
    String cancelText = "No",
    
    bool isDelete = false, 
    bool isBookingCancel = false,
  }) {
    showDialog(
...
